--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <div class="column right">
                     <div class="text">
                         Message me</div>
-                    <form action="#">
+                    <form action="https://formsubmit.co/el/savuli" method="POST">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" name="name" placeholder="Name" required>
