--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
                                 <input type="email" name="email" placeholder="Email" required>
                             </div>
                         </div>
+                         <div class="field number">
+                            <input type="tel" name="number" placeholder="Contact number" required>
+                         </div>
                         <div class="field">
                             <input type="text" name="subject" placeholder="Subject" required>
                         </div>
