--- a/index.html
+++ b/index.html
@@ -228,6 +228,9 @@
                             <div class="field email">
                                 <input type="email" name="email" placeholder="Email" required>
                             </div>
+                             <div class="field number">
+                                <input type="tel" name="number" placeholder="Contact number" required>
+                             </div>
                         </div>
                         <div class="field">
                             <input type="text" name="subject" placeholder="Subject" required>
